# WinPackageSearch

./: .gitignore  pyproject.toml
win_package_search/: __init__.py
win_package_search/components/: __init__.py  log_engine.py
win_package_search/components/result/: __init__.py  result.py
win_package_search/components/result/collection/: __init__.py  base.py  choco.py  metaclasses.py  winget.py
win_package_search/components/search/: __init__.py  base.py  choco.py  searcher.py  winget.py
