[project]
name = "win-package-search"
version = "1.0.0-dev.1"
description = ""
authors = [
    {name = "Taylor B.",email = "tayjaybabee@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "inspy-logger (==3.2.3)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipython = "^9.0.0"
prompt-toolkit = "^3.0.50"
ptipython = "^1.0.1"

